--- a/package.json
+++ b/package.json
@@ -4,15 +4,33 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-segmented-control/segmented-control": "^2.5.7",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "expo": "~52.0.23",
+    "expo-notifications": "^0.29.12",
+    "expo-router": "~4.0.15",
     "expo-status-bar": "~2.0.0",
+    "express": "^4.21.2",
+    "moment": "^2.30.1",
+    "mysql2": "^3.12.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-web": "~0.19.13",
+    "webidl-conversions": "^7.0.0",
+    "whatwg-url-without-unicode": "^8.0.0-3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
